tests/sksl/errors/UnsupportedGLSLIdentifiers.glsl
### Compilation failed:

error: 1: name 'gl_FragCoord' is reserved
void fragcoord() { float x = gl_FragCoord.x; }
                             ^^^^^^^^^^^^
error: 1: unknown identifier 'gl_FragCoord'
void fragcoord() { float x = gl_FragCoord.x; }
                             ^^^^^^^^^^^^
error: 2: name 'gl_FragColor' is reserved
void fragcolor() { float r = gl_FragColor.r; }
                             ^^^^^^^^^^^^
error: 2: unknown identifier 'gl_FragColor'
void fragcolor() { float r = gl_FragColor.r; }
                             ^^^^^^^^^^^^
4 errors
